tests/baselines/reference/typeAliasesForObjectTypes.errors.txt
typeAliasesForObjectTypes.ts(10,6): error TS2300: Duplicate identifier 'T2'.
typeAliasesForObjectTypes.ts(11,6): error TS2300: Duplicate identifier 'T2'.


==== typeAliasesForObjectTypes.ts (2 errors) ====
    type T1 = { x: string }
    
    // An interface can be named in an extends or implements clause, but a type alias for an object type literal cannot.
    interface I1 extends T1 { y: string }
    class C1 implements T1 {
        x: string;
    }
    
    // An interface can have multiple merged declarations, but a type alias for an object type literal cannot.
    type T2 = { x: string }
         ~~
!!! error TS2300: Duplicate identifier 'T2'.
    type T2 = { y: number }
         ~~
!!! error TS2300: Duplicate identifier 'T2'.
    
    // An interface can have type parameters, but a type alias for an object type literal cannot.
    type T3<T> = { x: T }
    